<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToDoApp Android Client</string>

    <!-- (error) messages -->
    <string name="error_title">an error occurred.</string>
    <string name="error_remote">no remote connection available</string>
    <string name="error_authorization">not authorized! check credentials</string>
    <string name="error_email_format">invalid email format</string>
    <string name="error_password_format">invalid password format</string>
    <string name="connection_available">remote connection available</string>

    <!-- login screen -->
    <string name="headline_login">ToDoApp. please login.</string>
    <string name="label_email">email</string>
    <string name="label_password">password</string>
    <string name="label_btn_login">login</string>
    <string name="progress_authenticating">authenticating</string>

    <!-- item list -->
    <string name="no_items_available_label">no items available</string>
    <string name="progress_loadingitemlist">loading todo items</string>
    <string name="label_create_item">create item</string>

    <!-- item detail -->
    <string name="label_edit_item">edit item</string>
    <string name="label_delete_item">delete item</string>
    <string name="label_title">title</string>
    <string name="label_description">description</string>
    <string name="label_latitude">latitude</string>
    <string name="label_longitude">longitude</string>
    <string name="label_dueDate">due date</string>
    <string name="label_status">status</string>
    <string name="label_isFavourite">is favourite?</string>
    <string name="progress_delete_item">deleting item</string>

    <!-- item form -->
    <string name="label_save_item">save</string>
    <string name="label_select_date">select date</string>
    <string name="label_select_time">select time</string>
    <string name="label_update_item">update item</string>
    <string name="progress_save_item">saving item</string>
    
    <string-array name="array_status">
        <item>OPEN</item>
        <item>CLOSED</item>
    </string-array>
    
    <string-array name="array_priority">
        <item>HIGH</item>
        <item>MEDIUM</item>
        <item>LOW</item>
    </string-array>

</resources>