<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroller"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/txt_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/headline"
            android:hint="@string/label_title"
            android:inputType="text" />

        <EditText
            android:id="@+id/txt_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_item_title"
            android:hint="@string/label_description"
            android:inputType="textMultiLine"
            android:lines="4"
            android:scrollHorizontally="false"
            android:singleLine="false" />

        <Button
            android:id="@+id/btn_select_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/txt_item_description"
            android:drawableLeft="@drawable/ic_map"
            android:drawablePadding="5dp"
            android:text="location" />

        <Button
            android:id="@+id/btn_select_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_select_location"
            android:drawableLeft="@drawable/ic_clock"
            android:drawablePadding="5dp"
            android:onClick="onClickSelectDate"
            android:text="@string/label_select_date" />

        <TextView
            android:id="@+id/txtLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn_select_location"
            android:layout_alignBottom="@+id/btn_select_location"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/btn_select_location"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtDueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn_select_date"
            android:layout_alignBottom="@+id/btn_select_date"
            android:layout_alignLeft="@+id/txtLocation"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtLocation"
            android:layout_centerVertical="true"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/txtLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtLocation"
            android:layout_alignTop="@+id/btn_select_location"
            android:text="LONGITUDE"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/txtLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtLocation"
            android:layout_below="@+id/txtLongitude"
            android:text="LATITUDE"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/btnSelectTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_select_date"
            android:drawableLeft="@drawable/ic_clock"
            android:drawablePadding="5dp"
            android:onClick="onClickSelectTime"
            android:text="@string/label_select_time" />

        <Button
            android:id="@+id/btn_save_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spn_status"
            android:onClick="onClickSaveItem"
            android:text="@string/label_save_item" />

        <Spinner
            android:id="@+id/spn_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnSelectTime"
            android:entries="@array/array_priority" />

        <Spinner
            android:id="@+id/spn_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spn_priority"
            android:entries="@array/array_status" />

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnSelectTime"
            android:layout_alignBottom="@+id/btnSelectTime"
            android:layout_alignRight="@+id/txtLongitude"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

</ScrollView>